--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateCourse.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_CreateCourse.cshtml
@@ -22,10 +22,9 @@
                     <div ng-message="server">{{l.error}}</div>
                 </div>
             </md-input-container>
-
         </md-content>
-        <div class="buttons" layout="row" layout-align="end stretch" class="text-capitalize">
-            <button type="button" class="cancel-btn" ng-click="l.boxCancel()" ga-track-event="['university', 'cancel new class']">@GeneralResources.Cancel</button>
+        <div class="buttons text-capitalize" layout="row" layout-align="end stretch">
+            <button type="reset" class="cancel-btn" ng-click="l.boxCancel()" ga-track-event="['university', 'cancel new class']">@GeneralResources.Cancel</button>
             <button type="button" class="action-btn space-before" ng-if="!l.secondStep" ng-disabled="!l.boxName" ng-click="l.boxNext()" ga-track-event="['university', 'next step new class']">@UniversityResources.Next</button>
             <button type="submit" class="action-btn space-before" ng-if="l.secondStep" ng-disabled="!createBox.$valid || l.submitDisabled" ga-track-event="['university', 'create new class']">@GeneralResources.Create</button>
         </div>
