--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -195,7 +195,19 @@
                                 <div class="close" ng-click="u.badgeInfo=false">X</div>
                             </div>
                         </div>
-                        <div ng-switch-when="c" class="tab community">community</div>
+                        <div ng-switch-when="c" class="tab community">
+                            <div class="top">
+                                <div class="bg-l"></div>
+                                <div class="bg-r"></div>
+                                <img class="title" src="~/Images/Site/Leaderborad-title.png" />
+                            </div>
+                            <div class="content">
+                                <div class="filters">
+                                   
+                                    <button type="button">Show Myself</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div ng-switch-when="u">
