--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -337,6 +337,24 @@
         .info.indent {
             margin: 0;
         }
+
+        .userblock {
+            position: relative;
+
+            .user-name {
+                padding-bottom: 16px;
+            }
+        }
+
+        .comment-date {
+            margin-left: 12px;
+            position: absolute;
+            bottom: 14px;
+        }
+
+        .content-text {
+            margin-left: 74px;
+        }
     }
 }
 
