--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -198,7 +198,7 @@
                 }
 
                 .md-tab.md-active {
-                    color: @badgesYellow;
+                    color: @gamificationYellow;
                 }
             }
 
@@ -214,7 +214,7 @@
                 }
 
                 md-progress-linear .md-bar {
-                    background: @badgesYellow;
+                    background: @gamificationYellow;
                 }
 
                 md-progress-linear,
@@ -296,7 +296,7 @@
                         }
 
                         .details {
-                            background: @badgesYellow;
+                            background: @gamificationYellow;
                             margin: 20px -10px -16px -10px;
                             color: @textColorWhite;
                             padding: 20px;
@@ -330,8 +330,11 @@
 
                         .close {
                             position: absolute;
-                            top: 5px;
-                            right: 5px;
+                            top: 20px;
+                            right: 12px;
+                            width: 20px;
+                            height: 20px;
+                            fill: @headerbackground;
                         }
                     }
 
@@ -355,7 +358,7 @@
                             position: absolute;
                             right: 10px;
                             top: 10px;
-                            background: @badgesYellow;
+                            background: @gamificationYellow;
                         }
 
                         .image {
@@ -370,7 +373,7 @@
 
                         .progress {
                             padding: 10px;
-                            border: 2px solid @badgesYellow;
+                            border: 2px solid @gamificationYellow;
                             border-radius: 10px;
                             max-width: 140px;
                             margin: 0 auto;
@@ -428,9 +431,9 @@
 
                             .dates, button {
                                 max-width: 150px;
-                                background: @buttonColorBlue;
                                 border-radius: 8px;
                                 width: 100%;
+                                box-shadow: none;
                             }
 
                             button {
@@ -438,6 +441,7 @@
                                 line-height: 28px;
                                 font-size: 18px;
                                 margin-left: 30px;
+                                padding: 1px;
                             }
 
                             .dates {
@@ -446,6 +450,7 @@
                                 .md-text {
                                     padding-left: 10px;
                                     color: @textColorWhite;
+                                    font-size: 18px;
                                 }
 
                                 .md-select-icon {
@@ -458,12 +463,40 @@
                                 }
                             }
                         }
+
+                        .users {
+                            .user {
+                                background: @textColorWhite;
+                                border: 1px solid black;
+                                text-align: center;
+                                display: inline-block;
+
+                                .user-data {
+                                    padding: 10px;
+                                }
+
+                                img {
+                                    border-radius: 100%;
+                                    width: 90px;
+                                    height: 90px;
+                                    border: 3px solid @textColorBlack;
+                                }
+
+                                &.top-user {
+                                    border: 3px solid @gamificationYellow;
+
+                                    img {
+                                        border: 1px solid @textColorWhite;
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
 
             md-ink-bar {
-                background: @badgesYellow;
+                background: @gamificationYellow;
                 height: 10px;
 
                 @media(max-width: 600px) {
