--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.rtl.css
@@ -637,7 +637,7 @@
   width: 15px;
   height: 15px;
 }
-.feed .actions .dropbox:hover md-icon {
+.feed .actions .dropbox:hover md-icon,
 .feed .actions .dropbox:hover svg {
   fill: #007EE5;
 }
