fixed scroll and delete button text color of uploaded file

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
@@ -1000,6 +1000,6 @@ md-menu-item > a.md-button {
   border-radius: 5px;
   line-height: 20px;
   margin: 0;
-  color: #212325;
+  color: #ffffff;
   background-color: #db4437;
 }
