--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -1069,7 +1069,7 @@ md-menu-item > a.md-button {
             border-radius: 5px;
             line-height: 20px;
             margin: 0;
-            color: @textColorBlack;
+            color: @textColorWhite;
             background-color: @backgroundColorRed;
         }
     }
