--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.less
@@ -645,10 +645,10 @@
                     md-input-container {
                         margin: 0;
                         font-size: 15px;
-                        max-height: 200px;
-                        overflow: auto;
-                        .displayFlex;
-                        .align-items(center);
+                        //max-height: 200px;
+                        //overflow: auto;
+                        //.displayFlex;
+                        //.align-items(center);
                         padding: 0;
                         margin-right: 50px;
 
@@ -657,6 +657,9 @@
                             border: none !important;
                             line-height: 22px;
                             padding: 0 0 0 10px;
+                            max-height: 200px;
+                            overflow: auto;
+                            margin: 6px 0 4px 0;
                             /*@media(max-width: 600px) {
                                 padding: 0 0 50px 10px;
                                 min-height: @newChatMessageHeightMobile;
