--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/chat.rtl.css
@@ -561,13 +561,6 @@
 .chat .content .conversasion .chat-content .new-message md-input-container {
   margin: 0;
   font-size: 15px;
-  max-height: 200px;
-  overflow: auto;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
   padding: 0;
   margin-left: 50px;
 }
@@ -576,6 +569,9 @@
   border: none !important;
   line-height: 22px;
   padding: 0 10px 0 0;
+  max-height: 200px;
+  overflow: auto;
+  margin: 6px 0 4px 0;
   /*@media(max-width: 600px) {
                                 padding: 0 0 50px 10px;
                                 min-height: @newChatMessageHeightMobile;
