--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -85,9 +85,12 @@ md-menu-item {
                 fill: @textColorGrey;
             }
 
-            svg, a {
+            md-icon, svg, a {
                 width: 16px;
                 height: 16px;
+            }
+            md-icon{
+                margin: 0 auto;
             }
         }
 
