--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -791,6 +791,13 @@ Page Loading
             top: -30px;
             right: 0;
             z-index: -1;
+
+
+            @media(max-width: 600px) {
+                width: 45px;
+                height: 45px;
+                top: -18px;
+            }
         }
 
         button.close {
@@ -814,6 +821,7 @@ Page Loading
                 md-icon {
                     width: 15px;
                     height: 15px;
+                    display: block;
                 }
             }
         }
