--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -582,7 +582,10 @@ md-menu-item > a.md-button {
             .displayFlex;
             .align-items(center);
             .justifyContet(space-between);
-            width: 26px;
+
+            md-icon {
+                margin-left: 4px;
+            }
         }
 
         .likes svg {
