--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -582,7 +582,10 @@ md-menu-item > a.md-button {
             .displayFlex;
             .align-items(center);
             .justifyContet(space-between);
-            width: 26px;
+
+            md-icon {
+                margin-left: 4px;
+            }
         }
 
         .likes svg {
@@ -1069,7 +1072,7 @@ md-menu-item > a.md-button {
             border-radius: 5px;
             line-height: 20px;
             margin: 0;
-            color: @textColorBlack;
+            color: @textColorWhite;
             background-color: @backgroundColorRed;
         }
     }
