--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/error.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/error.less
@@ -49,6 +49,7 @@
 .members-only-page {
     @media (min-width: 960px) {
         margin-left: -250px;
+        margin-right: -90px
     }
 
     img {
