--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -791,6 +791,12 @@ Page Loading
             top: -30px;
             right: 0;
             z-index: -1;
+
+            @media(max-width: 600px) {
+                width: 45px;
+                height: 45px;
+                top: -18px;
+            }
         }
 
         button.close {
