--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -426,6 +426,9 @@
 
                         .user, .filter-wrapper {
                             padding: 15px;
+                            width: 100%;
+                            max-width: 150px;
+                            display: inline-block;
                         }
 
                         .filters {
@@ -467,6 +470,9 @@
 
 
                         .users {
+                            .displayFlex;
+                            .align-items(flex-start);
+
                             .user {
                                 .user-data {
                                     background: @textColorWhite;
