--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.rtl.css
@@ -704,6 +704,13 @@ Page Loading
   left: 0;
   z-index: -1;
 }
+@media (max-width: 600px) {
+  .unreg-user .close-wrapper:after {
+    width: 45px;
+    height: 45px;
+    top: -18px;
+  }
+}
 .unreg-user .close-wrapper button.close {
   padding: 18px;
   border-radius: 50%;
