--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/Index2.cshtml
@@ -35,7 +35,7 @@
         </button>
     </div>
     <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" flex-order="10" hide-xs class="create-box flex" ng-if="l.createClassShow">
-        <button type="button" ng-click="l.openCreateBox()" class="box-style action" ng-class="{'active':l.createBoxOn}" ga-track-event="['university', 'add new class']">
+        <button focus-upon-click="createClassInput" type="button" ng-click="l.openCreateBox()" class="box-style action" ng-class="{'active':l.createBoxOn}" ga-track-event="['university', 'add new class']">
             <div class="wrapper">
                 @Html.Svg("~/images/site/icons.svg", "add", new { @class = "icon" })
                 <span class="text">@UniversityResources.AddClass</span>
